@@ -44,12 +44,11 @@ import java.math.BigInteger;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.ByteBuffer;
-import java.util.Arrays;
 import java.util.Calendar;
-import java.util.Collections;
 import java.util.GregorianCalendar;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -74,7 +73,7 @@ public class JsonConverterTest {
 
     @BeforeEach
     public void setUp() {
-        converter.configure(Collections.emptyMap(), false);
+        converter.configure(Map.of(), false);
     }
 
     // Schema metadata
@@ -155,7 +154,7 @@ public class JsonConverterTest {
     @Test
     public void arrayToConnect() {
         byte[] arrayJson = "{ \"schema\": { \"type\": \"array\", \"items\": { \"type\" : \"int32\" } }, \"payload\": [1, 2, 3] }".getBytes();
-        assertEquals(new SchemaAndValue(SchemaBuilder.array(Schema.INT32_SCHEMA).build(), Arrays.asList(1, 2, 3)), converter.toConnectData(TOPIC, arrayJson));
+        assertEquals(new SchemaAndValue(SchemaBuilder.array(Schema.INT32_SCHEMA).build(), List.of(1, 2, 3)), converter.toConnectData(TOPIC, arrayJson));
     }
 
     @Test
@@ -211,7 +210,7 @@ public class JsonConverterTest {
     @Test
     public void emptyBytesToConnect() {
         // This characterizes the messages with empty data when Json schemas is disabled
-        Map<String, Boolean> props = Collections.singletonMap("schemas.enable", false);
+        Map<String, Boolean> props = Map.of("schemas.enable", false);
         converter.configure(props, true);
         SchemaAndValue converted = converter.toConnectData(TOPIC, "".getBytes());
         assertEquals(SchemaAndValue.NULL, converted);
@@ -223,7 +222,7 @@ public class JsonConverterTest {
     @Test
     public void schemalessWithEmptyFieldValueToConnect() {
         // This characterizes the messages with empty data when Json schemas is disabled
-        Map<String, Boolean> props = Collections.singletonMap("schemas.enable", false);
+        Map<String, Boolean> props = Map.of("schemas.enable", false);
         converter.configure(props, true);
         String input = "{ \"a\": \"\", \"b\": null}";
         SchemaAndValue converted = converter.toConnectData(TOPIC, input.getBytes());
@@ -254,7 +253,7 @@ public class JsonConverterTest {
         assertEquals(new SchemaAndValue(null, "a string"), converted);
 
         converted = converter.toConnectData(TOPIC, "{ \"schema\": null, \"payload\": [1, \"2\", 3] }".getBytes());
-        assertEquals(new SchemaAndValue(null, Arrays.asList(1L, "2", 3L)), converted);
+        assertEquals(new SchemaAndValue(null, List.of(1L, "2", 3L)), converted);
 
         converted = converter.toConnectData(TOPIC, "{ \"schema\": null, \"payload\": { \"field1\": 1, \"field2\": 2} }".getBytes());
         Map<String, Long> obj = new HashMap<>();
@@ -587,7 +586,7 @@ public class JsonConverterTest {
     @Test
     public void arrayToJson() {
         Schema int32Array = SchemaBuilder.array(Schema.INT32_SCHEMA).build();
-        JsonNode converted = parse(converter.fromConnectData(TOPIC, int32Array, Arrays.asList(1, 2, 3)));
+        JsonNode converted = parse(converter.fromConnectData(TOPIC, int32Array, List.of(1, 2, 3)));
         validateEnvelope(converted);
         assertEquals(parse("{ \"type\": \"array\", \"items\": { \"type\": \"int32\", \"optional\": false }, \"optional\": false }"),
                 converted.get(JsonSchema.ENVELOPE_SCHEMA_FIELD_NAME));
@@ -675,7 +674,7 @@ public class JsonConverterTest {
 
     @Test
     public void decimalToNumericJson() {
-        converter.configure(Collections.singletonMap(JsonConverterConfig.DECIMAL_FORMAT_CONFIG, DecimalFormat.NUMERIC.name()), false);
+        converter.configure(Map.of(JsonConverterConfig.DECIMAL_FORMAT_CONFIG, DecimalFormat.NUMERIC.name()), false);
         JsonNode converted = parse(converter.fromConnectData(TOPIC, Decimal.schema(2), new BigDecimal(new BigInteger("156"), 2)));
         validateEnvelope(converted);
         assertEquals(parse("{ \"type\": \"bytes\", \"optional\": false, \"name\": \"org.apache.kafka.connect.data.Decimal\", \"version\": 1, \"parameters\": { \"scale\": \"2\" } }"),
@@ -686,7 +685,7 @@ public class JsonConverterTest {
 
     @Test
     public void decimalWithTrailingZerosToNumericJson() {
-        converter.configure(Collections.singletonMap(JsonConverterConfig.DECIMAL_FORMAT_CONFIG, DecimalFormat.NUMERIC.name()), false);
+        converter.configure(Map.of(JsonConverterConfig.DECIMAL_FORMAT_CONFIG, DecimalFormat.NUMERIC.name()), false);
         JsonNode converted = parse(converter.fromConnectData(TOPIC, Decimal.schema(4), new BigDecimal(new BigInteger("15600"), 4)));
         validateEnvelope(converted);
         assertEquals(parse("{ \"type\": \"bytes\", \"optional\": false, \"name\": \"org.apache.kafka.connect.data.Decimal\", \"version\": 1, \"parameters\": { \"scale\": \"4\" } }"),
@@ -766,7 +765,7 @@ public class JsonConverterTest {
     public void nullSchemaAndArrayToJson() {
         // This still needs to do conversion of data, null schema means "anything goes". Make sure we mix and match
         // types to verify conversion still works.
-        JsonNode converted = parse(converter.fromConnectData(TOPIC, null, Arrays.asList(1, "string", true)));
+        JsonNode converted = parse(converter.fromConnectData(TOPIC, null, List.of(1, "string", true)));
         validateEnvelopeNullSchema(converted);
         assertTrue(converted.get(JsonSchema.ENVELOPE_SCHEMA_FIELD_NAME).isNull());
         assertEquals(JsonNodeFactory.instance.arrayNode().add(1).add("string").add(true),
@@ -815,7 +814,7 @@ public class JsonConverterTest {
     @Test
     public void nullSchemaAndNullValueToJson() {
         // This characterizes the production of tombstone messages when Json schemas is enabled
-        Map<String, Boolean> props = Collections.singletonMap("schemas.enable", true);
+        Map<String, Boolean> props = Map.of("schemas.enable", true);
         converter.configure(props, true);
         byte[] converted = converter.fromConnectData(TOPIC, null, null);
         assertNull(converted);
@@ -824,7 +823,7 @@ public class JsonConverterTest {
     @Test
     public void nullValueToJson() {
         // This characterizes the production of tombstone messages when Json schemas is not enabled
-        Map<String, Boolean> props = Collections.singletonMap("schemas.enable", false);
+        Map<String, Boolean> props = Map.of("schemas.enable", false);
         converter.configure(props, true);
         byte[] converted = converter.fromConnectData(TOPIC, null, null);
         assertNull(converted);
@@ -839,14 +838,14 @@ public class JsonConverterTest {
 
     @Test
     public void noSchemaToConnect() {
-        Map<String, Boolean> props = Collections.singletonMap("schemas.enable", false);
+        Map<String, Boolean> props = Map.of("schemas.enable", false);
         converter.configure(props, true);
         assertEquals(new SchemaAndValue(null, true), converter.toConnectData(TOPIC, "true".getBytes()));
     }
 
     @Test
     public void noSchemaToJson() {
-        Map<String, Boolean> props = Collections.singletonMap("schemas.enable", false);
+        Map<String, Boolean> props = Map.of("schemas.enable", false);
         converter.configure(props, true);
         JsonNode converted = parse(converter.fromConnectData(TOPIC, null, true));
         assertTrue(converted.isBoolean());
@@ -876,7 +875,7 @@ public class JsonConverterTest {
         File propFile = new File(url.toURI());
         String workerPropsFile = propFile.getAbsolutePath();
         Map<String, String> workerProps = !workerPropsFile.isEmpty() ?
-                Utils.propsToStringMap(Utils.loadProps(workerPropsFile)) : Collections.emptyMap();
+                Utils.propsToStringMap(Utils.loadProps(workerPropsFile)) : Map.of();
 
         JsonConverter rc = new JsonConverter();
         rc.configure(workerProps, false);
@@ -901,7 +900,7 @@ public class JsonConverterTest {
 
     @Test
     public void serializeNullToDefault() {
-        converter.configure(Collections.singletonMap(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, true), false);
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, true), false);
         Schema schema = SchemaBuilder.string().optional().defaultValue("default").build();
         JsonNode converted = parse(converter.fromConnectData(TOPIC, schema, null));
         JsonNode expected = parse("{\"schema\":{\"type\":\"string\",\"optional\":true,\"default\":\"default\"},\"payload\":\"default\"}");
@@ -910,7 +909,7 @@ public class JsonConverterTest {
 
     @Test
     public void serializeNullToNull() {
-        converter.configure(Collections.singletonMap(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, false), false);
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, false), false);
         Schema schema = SchemaBuilder.string().optional().defaultValue("default").build();
         JsonNode converted = parse(converter.fromConnectData(TOPIC, schema, null));
         JsonNode expected = parse("{\"schema\":{\"type\":\"string\",\"optional\":true,\"default\":\"default\"},\"payload\":null}");
@@ -919,7 +918,7 @@ public class JsonConverterTest {
 
     @Test
     public void deserializeNullToDefault() {
-        converter.configure(Collections.singletonMap(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, true), false);
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, true), false);
         String value = "{\"schema\":{\"type\":\"string\",\"optional\":true,\"default\":\"default\"},\"payload\":null}";
         SchemaAndValue sav = converter.toConnectData(TOPIC, null, value.getBytes());
         assertEquals("default", sav.value());
@@ -927,7 +926,7 @@ public class JsonConverterTest {
 
     @Test
     public void deserializeNullToNull() {
-        converter.configure(Collections.singletonMap(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, false), false);
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, false), false);
         String value = "{\"schema\":{\"type\":\"string\",\"optional\":true,\"default\":\"default\"},\"payload\":null}";
         SchemaAndValue sav = converter.toConnectData(TOPIC, null, value.getBytes());
         assertNull(sav.value());
@@ -935,7 +934,7 @@ public class JsonConverterTest {
 
     @Test
     public void serializeFieldNullToDefault() {
-        converter.configure(Collections.singletonMap(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, true), false);
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, true), false);
         Schema schema = SchemaBuilder.string().optional().defaultValue("default").build();
         Schema structSchema = SchemaBuilder.struct().field("field1", schema).build();
         JsonNode converted = parse(converter.fromConnectData(TOPIC, structSchema, new Struct(structSchema)));
@@ -945,7 +944,7 @@ public class JsonConverterTest {
 
     @Test
     public void serializeFieldNullToNull() {
-        converter.configure(Collections.singletonMap(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, false), false);
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, false), false);
         Schema schema = SchemaBuilder.string().optional().defaultValue("default").build();
         Schema structSchema = SchemaBuilder.struct().field("field1", schema).build();
         JsonNode converted = parse(converter.fromConnectData(TOPIC, structSchema, new Struct(structSchema)));
@@ -955,7 +954,7 @@ public class JsonConverterTest {
 
     @Test
     public void deserializeFieldNullToDefault() {
-        converter.configure(Collections.singletonMap(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, true), false);
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, true), false);
         String value = "{\"schema\":{\"type\":\"struct\",\"fields\":[{\"field\":\"field1\",\"type\":\"string\",\"optional\":true,\"default\":\"default\"}],\"optional\":false},\"payload\":{\"field1\":null}}";
         SchemaAndValue sav = converter.toConnectData(TOPIC, null, value.getBytes());
         Schema schema = SchemaBuilder.string().optional().defaultValue("default").build();
@@ -965,7 +964,7 @@ public class JsonConverterTest {
 
     @Test
     public void deserializeFieldNullToNull() {
-        converter.configure(Collections.singletonMap(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, false), false);
+        converter.configure(Map.of(JsonConverterConfig.REPLACE_NULL_WITH_DEFAULT_CONFIG, false), false);
         String value = "{\"schema\":{\"type\":\"struct\",\"fields\":[{\"field\":\"field1\",\"type\":\"string\",\"optional\":true,\"default\":\"default\"}],\"optional\":false},\"payload\":{\"field1\":null}}";
         SchemaAndValue sav = converter.toConnectData(TOPIC, null, value.getBytes());
         Schema schema = SchemaBuilder.string().optional().defaultValue("default").build();
